--- a/IS1113_Web_Dev/Projects/Project 2/IS1113_Project_Part_2/style.css
+++ b/IS1113_Web_Dev/Projects/Project 2/IS1113_Project_Part_2/style.css
@@ -85,36 +85,39 @@ article, #contact-form {
     border-radius: 16px;
 }
 
-/* Floating contact button */
-.contact-button {
-    position: fixed;
+/* Buttons */
+.button {
     right: 20px;
     bottom: 20px;
-    z-index: 100;
     padding: 16px 24px;
     font-size: 14px;
     background-color: #EAAA00;
     border: none;
     border-radius: 320px;
-    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
     cursor: pointer;
 }
 
-.contact-button > a {
+.button > a, #button-text {
     display: block;
     font-weight: 600;
     line-height: 1;
-    color: black;
+    color: black; /* TODO: Doesn't seem to work on the contact button */
     text-decoration: none;
     white-space: nowrap;
 }
 
-.contact-button:hover {
+.button:hover {
     background-color: #000;
 }
 
-.contact-button:hover > a {
-    color: white;
+.button:hover > a, #button-text {
+    color: white; /* TODO: Doesn't seem to work on the contact button */
+}
+
+#contact-button {
+    position: fixed;
+    z-index: 100;
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
 }
 
 /* Shared entry text */
@@ -125,4 +128,14 @@ article, #contact-form {
 .entry-date {
     margin: 4px 0;
     color: #555;
+}
+
+/* Contact form */
+.contact-form-input, #message {
+    appearance: none;
+    width: 90%;
+    border-width: 2px; /* Change to red if input invalid, like no @ sign in an email address */
+    border-radius: 4px;
+    border-color: rgba(0, 0, 0, 0.25);
+    padding: 16px 24px;
 }
