--- a/IS1113_Web_Dev/Projects/Project 2/IS1113_Project_Part_2/style.css
+++ b/IS1113_Web_Dev/Projects/Project 2/IS1113_Project_Part_2/style.css
@@ -97,11 +97,11 @@ article, #contact-form {
     cursor: pointer;
 }
 
-.button > a {
+.button > a, #button-text {
     display: block;
     font-weight: 600;
     line-height: 1;
-    color: black;
+    color: black; /* TODO: Doesn't seem to work on the contact button */
     text-decoration: none;
     white-space: nowrap;
 }
@@ -110,8 +110,8 @@ article, #contact-form {
     background-color: #000;
 }
 
-.button:hover > a {
-    color: white;
+.button:hover > a, #button-text {
+    color: white; /* TODO: Doesn't seem to work on the contact button */
 }
 
 #contact-button {
@@ -128,4 +128,14 @@ article, #contact-form {
 .entry-date {
     margin: 4px 0;
     color: #555;
+}
+
+/* Contact form */
+.contact-form-input, #message {
+    appearance: none;
+    width: 90%;
+    border-width: 2px; /* Change to red if input invalid, like no @ sign in an email address */
+    border-radius: 4px;
+    border-color: rgba(0, 0, 0, 0.25);
+    padding: 16px 24px;
 }
