--- a/IS1113_Web_Dev/Projects/Project 2/IS1113_Project_Part_2/style.css
+++ b/IS1113_Web_Dev/Projects/Project 2/IS1113_Project_Part_2/style.css
@@ -139,3 +139,26 @@ article, #contact-form {
     border-color: rgba(0, 0, 0, 0.25);
     padding: 16px 24px;
 }
+
+/* Contact form */
+.contact-form-input, #message {
+    appearance: none;
+    width: 90%;
+    border-width: 2px; /* Change to red if input invalid, like no @ sign in an email address */
+    border-radius: 4px;
+    border-color: rgba(0, 0, 0, 0.25);
+    padding: 8px;
+}
+
+.contact-form-input:focus, #message:focus {
+    outline: none;
+    border-color: #EAAA00;
+}
+
+.contact-form-input:invalid, #message:invalid {
+    border-color: #ee0404;
+}
+
+.contact-form-label {
+    margin: 12px 0 4px;
+}
